// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`displayes a success message 1`] = `
<DocumentFragment>
  <div
    class="Alert alert-success"
  >
    Success!!!
  </div>
</DocumentFragment>
`;

exports[`displayes an error message 1`] = `
<DocumentFragment>
  <div
    class="Alert alert-error"
  >
    Error!
  </div>
</DocumentFragment>
`;

exports[`does not render error or success message if message prop is empty 1`] = `<DocumentFragment />`;
